--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Fri, 02 Aug 2019 00:12:37 GMT
+ * Generated on Fri, 02 Aug 2019 01:36:40 GMT
  */
 
 $asset-font-icon-name: "MaterialIcons";
@@ -13,149 +13,21 @@ $asset-font-opensans-ttf: "assets/fonts/OpenSans-Regular.ttf";
 $asset-font-roboto-name: "Roboto";
 $asset-font-roboto-ttf: "assets/fonts/Roboto-Regular.ttf";
 $color-background-base: #ffffff;
-$color-background-alt: #cfd8dc;
-$color-background-disabled: #cfd8dc;
-$color-background-inverse: #263238;
-$color-background-success: #43a047;
-$color-background-error: #e53935;
-$color-background-warning: #ef6c00;
-$color-background-info: #039be5;
-$color-background-link: #039be5;
-$color-background-low-priority: #757575;
-$color-background-button-primary-base: #009688;
-$color-background-button-primary-disabled: #4db6ac;
-$color-background-button-primary-active: #00796b;
-$color-background-button-secondary-base: #3f51b5;
-$color-background-button-secondary-disabled: #7986cb;
-$color-background-button-secondary-active: #303f9f;
+$color-background-button-primary-base: #1665db;
+$color-background-button-primary-disabled: #1665db;
+$color-background-button-primary-active: #1665db;
+$color-background-button-secondary-base: #1665db;
+$color-background-button-secondary-disabled: #1665db;
+$color-background-button-secondary-active: #1665db;
 $color-background-overlay-light: rgba(255, 255, 255, 0.8);
 $color-background-overlay-dark: rgba(0, 0, 0, 0.27);
 $color-base-red-50: #ffe5ee;
 $color-base-red-100: #ffcdd2;
 $color-base-red-200: #ef9a9a;
-$color-base-red-300: #e57373;
-$color-base-red-400: #ef5350;
-$color-base-red-500: #f44336;
-$color-base-red-600: #e53935;
-$color-base-red-700: #d32f2f;
-$color-base-red-800: #c62828;
-$color-base-red-900: #b71c1c;
-$color-base-red-a-100: #ff8a80;
-$color-base-red-a-200: #ff5252;
-$color-base-red-a-400: #ff1744;
-$color-base-red-a-700: #d50000;
 $color-base-pink-50: #fce4ec;
 $color-base-pink-100: #f8bbd0;
 $color-base-pink-200: #f48fb1;
 $color-base-pink-300: #f06292;
-$color-base-pink-400: #ec407a;
-$color-base-pink-500: #e91e63;
-$color-base-pink-600: #d81b60;
-$color-base-pink-700: #c2185b;
-$color-base-pink-800: #ad1457;
-$color-base-pink-900: #880e4f;
-$color-base-pink-a-100: #ff80ab;
-$color-base-pink-a-200: #ff4081;
-$color-base-pink-a-400: #f50057;
-$color-base-pink-a-700: #c51162;
-$color-base-purple-50: #f3e5f5;
-$color-base-purple-100: #e1bee7;
-$color-base-purple-200: #ce93d8;
-$color-base-purple-300: #ba68c8;
-$color-base-purple-400: #ab47bc;
-$color-base-purple-500: #9c27b0;
-$color-base-purple-600: #8e24aa;
-$color-base-purple-700: #7b1fa2;
-$color-base-purple-800: #6a1b9a;
-$color-base-purple-900: #4a148c;
-$color-base-purple-a-100: #ea80fc;
-$color-base-purple-a-200: #e040fb;
-$color-base-purple-a-400: #d500f9;
-$color-base-purple-a-700: #aa00ff;
-$color-base-deep-purple-50: #ede7f6;
-$color-base-deep-purple-100: #d1c4e9;
-$color-base-deep-purple-200: #b39ddb;
-$color-base-deep-purple-300: #9575cd;
-$color-base-deep-purple-400: #7e57c2;
-$color-base-deep-purple-500: #673ab7;
-$color-base-deep-purple-600: #5e35b1;
-$color-base-deep-purple-700: #512da8;
-$color-base-deep-purple-800: #4527a0;
-$color-base-deep-purple-900: #311b92;
-$color-base-deep-purple-a-100: #b388ff;
-$color-base-deep-purple-a-200: #7c4dff;
-$color-base-deep-purple-a-400: #651fff;
-$color-base-deep-purple-a-700: #6200ea;
-$color-base-indigo-50: #e8eaf6;
-$color-base-indigo-100: #c5cae9;
-$color-base-indigo-200: #9fa8da;
-$color-base-indigo-300: #7986cb;
-$color-base-indigo-400: #5c6bc0;
-$color-base-indigo-500: #3f51b5;
-$color-base-indigo-600: #3949ab;
-$color-base-indigo-700: #303f9f;
-$color-base-indigo-800: #283593;
-$color-base-indigo-900: #1a237e;
-$color-base-indigo-a-100: #8c9eff;
-$color-base-indigo-a-200: #536dfe;
-$color-base-indigo-a-400: #3d5afe;
-$color-base-indigo-a-700: #304ffe;
-$color-base-blue-50: #e3f2fd;
-$color-base-blue-100: #bbdefb;
-$color-base-blue-200: #90caf9;
-$color-base-blue-300: #64b5f6;
-$color-base-blue-400: #42a5f5;
-$color-base-blue-500: #2196f3;
-$color-base-blue-600: #1e88e5;
-$color-base-blue-700: #1976d2;
-$color-base-blue-800: #1565c0;
-$color-base-blue-900: #0d47a1;
-$color-base-blue-a-100: #82b1ff;
-$color-base-blue-a-200: #448aff;
-$color-base-blue-a-400: #2979ff;
-$color-base-blue-a-700: #2962ff;
-$color-base-light-blue-50: #e1f5fe;
-$color-base-light-blue-100: #b3e5fc;
-$color-base-light-blue-200: #81d4fa;
-$color-base-light-blue-300: #4fc3f7;
-$color-base-light-blue-400: #29b6f6;
-$color-base-light-blue-500: #03a9f4;
-$color-base-light-blue-600: #039be5;
-$color-base-light-blue-700: #0288d1;
-$color-base-light-blue-800: #0277bd;
-$color-base-light-blue-900: #01579b;
-$color-base-light-blue-a-100: #80d8ff;
-$color-base-light-blue-a-200: #40c4ff;
-$color-base-light-blue-a-400: #00b0ff;
-$color-base-light-blue-a-700: #0091ea;
-$color-base-cyan-50: #e0f7fa;
-$color-base-cyan-100: #b2ebf2;
-$color-base-cyan-200: #80deea;
-$color-base-cyan-300: #4dd0e1;
-$color-base-cyan-400: #26c6da;
-$color-base-cyan-500: #00bcd4;
-$color-base-cyan-600: #00acc1;
-$color-base-cyan-700: #0097a7;
-$color-base-cyan-800: #00838f;
-$color-base-cyan-900: #006064;
-$color-base-cyan-a-100: #84ffff;
-$color-base-cyan-a-200: #18ffff;
-$color-base-cyan-a-400: #00e5ff;
-$color-base-cyan-a-700: #00b8d4;
-$color-base-teal-50: #e0f2f1;
-$color-base-teal-100: #b2dfdb;
-$color-base-teal-200: #80cbc4;
-$color-base-teal-300: #4db6ac;
-$color-base-teal-400: #26a69a;
-$color-base-teal-500: #009688;
-$color-base-teal-600: #00897b;
-$color-base-teal-700: #00796b;
-$color-base-teal-800: #00695c;
-$color-base-teal-900: #004d40;
-$color-base-teal-a-100: #a7ffeb;
-$color-base-teal-a-200: #64ffda;
-$color-base-teal-a-400: #1de9b6;
-$color-base-teal-a-700: #00bfa5;
 $color-base-green-50: #e8f5e9;
 $color-base-green-100: #c8e6c9;
 $color-base-green-200: #a5d6a7;
@@ -274,6 +146,8 @@ $color-base-grey-600: #757575;
 $color-base-grey-700: #616161;
 $color-base-grey-800: #424242;
 $color-base-grey-900: #212121;
+$color-base-blue-50: #6db3e5;
+$color-base-blue-100: #1665db;
 $color-base-blue-grey-50: #eceff1;
 $color-base-blue-grey-100: #cfd8dc;
 $color-base-blue-grey-200: #b0bec5;
@@ -289,54 +163,37 @@ $color-base-black: #000000;
 $color-border-light: #eeeeee;
 $color-border-base: #e0e0e0;
 $color-border-dark: #bdbdbd;
-$color-border-focus: #009688;
-$color-border-error: #e53935;
+$color-border-focus: #1665db;
+$color-border-error: #1665db;
 $color-border-warning: #fb8c00;
 $color-border-success: #43a047;
 $color-border-button-secondary-base: #e0e0e0;
-$color-border-button-secondary-active: #303f9f;
+$color-border-button-secondary-active: [object Object];
 $color-border-button-secondary-disabled: #eeeeee;
-$color-brand-primary-lighter: #b2dfdb;
-$color-brand-primary-light: #4db6ac;
-$color-brand-primary-base: #009688;
-$color-brand-primary-dark: #00796b;
-$color-brand-primary-darker: #004d40;
-$color-brand-secondary-lighter: #c5cae9;
-$color-brand-secondary-light: #7986cb;
-$color-brand-secondary-base: #3f51b5;
-$color-brand-secondary-dark: #303f9f;
-$color-brand-secondary-darker: #1a237e;
-$color-chart-stacked-base-100: #bbdefb;
-$color-chart-stacked-base-200: #90caf9;
-$color-chart-stacked-base-300: #64b5f6;
-$color-chart-stacked-base-400: #42a5f5;
-$color-chart-stacked-base-500: #2196f3;
-$color-chart-stacked-base-600: #1e88e5;
-$color-chart-stacked-base-700: #1976d2;
-$color-chart-stacked-base-800: #1565c0;
-$color-chart-stacked-base-900: #0d47a1;
-$color-font-base: #212121;
-$color-font-secondary: #424242;
-$color-font-tertiary: #757575;
-$color-font-quaternary: #bdbdbd;
-$color-font-link: #009688;
-$color-font-active: #3f51b5;
-$color-font-error: #e53935;
-$color-font-warning: #ef6c00;
-$color-font-success: #43a047;
-$color-font-disabled: #424242;
+$color-brand-primary-lighter: #1665db;
+$color-brand-primary-light: #1665db;
+$color-brand-primary-base: #1665db;
+$color-brand-primary-dark: #1665db;
+$color-brand-primary-darker: #1665db;
+$color-brand-secondary-lighter: #1665db;
+$color-brand-secondary-light: #1665db;
+$color-brand-secondary-base: #1665db;
+$color-brand-secondary-dark: #1665db;
+$color-brand-secondary-darker: #1665db;
+$color-font-base: #1665db;
+$color-font-secondary: #1665db;
 $color-font-inverse-base: #ffffff;
-$color-font-inverse-secondary: #f5f5f5;
-$color-font-inverse-tertiary: #eeeeee;
-$color-font-inverse-quaternary: #bdbdbd;
-$color-font-inverse-link: #4db6ac;
-$color-font-inverse-active: #7986cb;
-$color-font-inverse-error: #ef5350;
-$color-font-inverse-warning: #ffa726;
-$color-font-inverse-success: #66bb6a;
-$color-font-inverse-disabled: #f5f5f5;
+$color-font-inverse-secondary: #1665db;
+$color-font-inverse-tertiary: #1665db;
+$color-font-inverse-quaternary: #1665db;
+$color-font-inverse-link: #1665db;
+$color-font-inverse-active: #1665db;
+$color-font-inverse-error: #1665db;
+$color-font-inverse-warning: #1665db;
+$color-font-inverse-success: #1665db;
+$color-font-inverse-disabled: #1665db;
 $color-font-button-primary: #ffffff;
-$color-font-button-secondary: #009688;
+$color-font-button-secondary: [object Object];
 $content-icon-3-d-rotation: 3d_rotation;
 $content-icon-airline-seat-individual-suite: airline_seat_individual_suite;
 $content-icon-airline-seat-legroom-reduced: airline_seat_legroom_reduced;
