--- a/android/styledictionary/src/main/res/values/style_dictionary_colors.xml
+++ b/android/styledictionary/src/main/res/values/style_dictionary_colors.xml
@@ -2,153 +2,25 @@
 
 <!--
   Do not edit directly
-  Generated on Fri, 02 Aug 2019 00:12:37 GMT
+  Generated on Fri, 02 Aug 2019 01:36:40 GMT
 -->
 <resources>
   <color name="color_background_base">#ffffffff</color>
-  <color name="color_background_alt">#ffcfd8dc</color>
-  <color name="color_background_disabled">#ffcfd8dc</color>
-  <color name="color_background_inverse">#ff263238</color>
-  <color name="color_background_success">#ff43a047</color>
-  <color name="color_background_error">#ffe53935</color>
-  <color name="color_background_warning">#ffef6c00</color>
-  <color name="color_background_info">#ff039be5</color>
-  <color name="color_background_link">#ff039be5</color>
-  <color name="color_background_low_priority">#ff757575</color>
-  <color name="color_background_button_primary_base">#ff009688</color>
-  <color name="color_background_button_primary_disabled">#ff4db6ac</color>
-  <color name="color_background_button_primary_active">#ff00796b</color>
-  <color name="color_background_button_secondary_base">#ff3f51b5</color>
-  <color name="color_background_button_secondary_disabled">#ff7986cb</color>
-  <color name="color_background_button_secondary_active">#ff303f9f</color>
+  <color name="color_background_button_primary_base">#ff1665db</color>
+  <color name="color_background_button_primary_disabled">#ff1665db</color>
+  <color name="color_background_button_primary_active">#ff1665db</color>
+  <color name="color_background_button_secondary_base">#ff1665db</color>
+  <color name="color_background_button_secondary_disabled">#ff1665db</color>
+  <color name="color_background_button_secondary_active">#ff1665db</color>
   <color name="color_background_overlay_light">#ccffffff</color>
   <color name="color_background_overlay_dark">#44000000</color>
   <color name="color_base_red_50">#ffffe5ee</color>
   <color name="color_base_red_100">#ffffcdd2</color>
   <color name="color_base_red_200">#ffef9a9a</color>
-  <color name="color_base_red_300">#ffe57373</color>
-  <color name="color_base_red_400">#ffef5350</color>
-  <color name="color_base_red_500">#fff44336</color>
-  <color name="color_base_red_600">#ffe53935</color>
-  <color name="color_base_red_700">#ffd32f2f</color>
-  <color name="color_base_red_800">#ffc62828</color>
-  <color name="color_base_red_900">#ffb71c1c</color>
-  <color name="color_base_red_a_100">#ffff8a80</color>
-  <color name="color_base_red_a_200">#ffff5252</color>
-  <color name="color_base_red_a_400">#ffff1744</color>
-  <color name="color_base_red_a_700">#ffd50000</color>
   <color name="color_base_pink_50">#fffce4ec</color>
   <color name="color_base_pink_100">#fff8bbd0</color>
   <color name="color_base_pink_200">#fff48fb1</color>
   <color name="color_base_pink_300">#fff06292</color>
-  <color name="color_base_pink_400">#ffec407a</color>
-  <color name="color_base_pink_500">#ffe91e63</color>
-  <color name="color_base_pink_600">#ffd81b60</color>
-  <color name="color_base_pink_700">#ffc2185b</color>
-  <color name="color_base_pink_800">#ffad1457</color>
-  <color name="color_base_pink_900">#ff880e4f</color>
-  <color name="color_base_pink_a_100">#ffff80ab</color>
-  <color name="color_base_pink_a_200">#ffff4081</color>
-  <color name="color_base_pink_a_400">#fff50057</color>
-  <color name="color_base_pink_a_700">#ffc51162</color>
-  <color name="color_base_purple_50">#fff3e5f5</color>
-  <color name="color_base_purple_100">#ffe1bee7</color>
-  <color name="color_base_purple_200">#ffce93d8</color>
-  <color name="color_base_purple_300">#ffba68c8</color>
-  <color name="color_base_purple_400">#ffab47bc</color>
-  <color name="color_base_purple_500">#ff9c27b0</color>
-  <color name="color_base_purple_600">#ff8e24aa</color>
-  <color name="color_base_purple_700">#ff7b1fa2</color>
-  <color name="color_base_purple_800">#ff6a1b9a</color>
-  <color name="color_base_purple_900">#ff4a148c</color>
-  <color name="color_base_purple_a_100">#ffea80fc</color>
-  <color name="color_base_purple_a_200">#ffe040fb</color>
-  <color name="color_base_purple_a_400">#ffd500f9</color>
-  <color name="color_base_purple_a_700">#ffaa00ff</color>
-  <color name="color_base_deep_purple_50">#ffede7f6</color>
-  <color name="color_base_deep_purple_100">#ffd1c4e9</color>
-  <color name="color_base_deep_purple_200">#ffb39ddb</color>
-  <color name="color_base_deep_purple_300">#ff9575cd</color>
-  <color name="color_base_deep_purple_400">#ff7e57c2</color>
-  <color name="color_base_deep_purple_500">#ff673ab7</color>
-  <color name="color_base_deep_purple_600">#ff5e35b1</color>
-  <color name="color_base_deep_purple_700">#ff512da8</color>
-  <color name="color_base_deep_purple_800">#ff4527a0</color>
-  <color name="color_base_deep_purple_900">#ff311b92</color>
-  <color name="color_base_deep_purple_a_100">#ffb388ff</color>
-  <color name="color_base_deep_purple_a_200">#ff7c4dff</color>
-  <color name="color_base_deep_purple_a_400">#ff651fff</color>
-  <color name="color_base_deep_purple_a_700">#ff6200ea</color>
-  <color name="color_base_indigo_50">#ffe8eaf6</color>
-  <color name="color_base_indigo_100">#ffc5cae9</color>
-  <color name="color_base_indigo_200">#ff9fa8da</color>
-  <color name="color_base_indigo_300">#ff7986cb</color>
-  <color name="color_base_indigo_400">#ff5c6bc0</color>
-  <color name="color_base_indigo_500">#ff3f51b5</color>
-  <color name="color_base_indigo_600">#ff3949ab</color>
-  <color name="color_base_indigo_700">#ff303f9f</color>
-  <color name="color_base_indigo_800">#ff283593</color>
-  <color name="color_base_indigo_900">#ff1a237e</color>
-  <color name="color_base_indigo_a_100">#ff8c9eff</color>
-  <color name="color_base_indigo_a_200">#ff536dfe</color>
-  <color name="color_base_indigo_a_400">#ff3d5afe</color>
-  <color name="color_base_indigo_a_700">#ff304ffe</color>
-  <color name="color_base_blue_50">#ffe3f2fd</color>
-  <color name="color_base_blue_100">#ffbbdefb</color>
-  <color name="color_base_blue_200">#ff90caf9</color>
-  <color name="color_base_blue_300">#ff64b5f6</color>
-  <color name="color_base_blue_400">#ff42a5f5</color>
-  <color name="color_base_blue_500">#ff2196f3</color>
-  <color name="color_base_blue_600">#ff1e88e5</color>
-  <color name="color_base_blue_700">#ff1976d2</color>
-  <color name="color_base_blue_800">#ff1565c0</color>
-  <color name="color_base_blue_900">#ff0d47a1</color>
-  <color name="color_base_blue_a_100">#ff82b1ff</color>
-  <color name="color_base_blue_a_200">#ff448aff</color>
-  <color name="color_base_blue_a_400">#ff2979ff</color>
-  <color name="color_base_blue_a_700">#ff2962ff</color>
-  <color name="color_base_light_blue_50">#ffe1f5fe</color>
-  <color name="color_base_light_blue_100">#ffb3e5fc</color>
-  <color name="color_base_light_blue_200">#ff81d4fa</color>
-  <color name="color_base_light_blue_300">#ff4fc3f7</color>
-  <color name="color_base_light_blue_400">#ff29b6f6</color>
-  <color name="color_base_light_blue_500">#ff03a9f4</color>
-  <color name="color_base_light_blue_600">#ff039be5</color>
-  <color name="color_base_light_blue_700">#ff0288d1</color>
-  <color name="color_base_light_blue_800">#ff0277bd</color>
-  <color name="color_base_light_blue_900">#ff01579b</color>
-  <color name="color_base_light_blue_a_100">#ff80d8ff</color>
-  <color name="color_base_light_blue_a_200">#ff40c4ff</color>
-  <color name="color_base_light_blue_a_400">#ff00b0ff</color>
-  <color name="color_base_light_blue_a_700">#ff0091ea</color>
-  <color name="color_base_cyan_50">#ffe0f7fa</color>
-  <color name="color_base_cyan_100">#ffb2ebf2</color>
-  <color name="color_base_cyan_200">#ff80deea</color>
-  <color name="color_base_cyan_300">#ff4dd0e1</color>
-  <color name="color_base_cyan_400">#ff26c6da</color>
-  <color name="color_base_cyan_500">#ff00bcd4</color>
-  <color name="color_base_cyan_600">#ff00acc1</color>
-  <color name="color_base_cyan_700">#ff0097a7</color>
-  <color name="color_base_cyan_800">#ff00838f</color>
-  <color name="color_base_cyan_900">#ff006064</color>
-  <color name="color_base_cyan_a_100">#ff84ffff</color>
-  <color name="color_base_cyan_a_200">#ff18ffff</color>
-  <color name="color_base_cyan_a_400">#ff00e5ff</color>
-  <color name="color_base_cyan_a_700">#ff00b8d4</color>
-  <color name="color_base_teal_50">#ffe0f2f1</color>
-  <color name="color_base_teal_100">#ffb2dfdb</color>
-  <color name="color_base_teal_200">#ff80cbc4</color>
-  <color name="color_base_teal_300">#ff4db6ac</color>
-  <color name="color_base_teal_400">#ff26a69a</color>
-  <color name="color_base_teal_500">#ff009688</color>
-  <color name="color_base_teal_600">#ff00897b</color>
-  <color name="color_base_teal_700">#ff00796b</color>
-  <color name="color_base_teal_800">#ff00695c</color>
-  <color name="color_base_teal_900">#ff004d40</color>
-  <color name="color_base_teal_a_100">#ffa7ffeb</color>
-  <color name="color_base_teal_a_200">#ff64ffda</color>
-  <color name="color_base_teal_a_400">#ff1de9b6</color>
-  <color name="color_base_teal_a_700">#ff00bfa5</color>
   <color name="color_base_green_50">#ffe8f5e9</color>
   <color name="color_base_green_100">#ffc8e6c9</color>
   <color name="color_base_green_200">#ffa5d6a7</color>
@@ -267,6 +139,8 @@
   <color name="color_base_grey_700">#ff616161</color>
   <color name="color_base_grey_800">#ff424242</color>
   <color name="color_base_grey_900">#ff212121</color>
+  <color name="color_base_blue_50">#ff6db3e5</color>
+  <color name="color_base_blue_100">#ff1665db</color>
   <color name="color_base_blue_grey_50">#ffeceff1</color>
   <color name="color_base_blue_grey_100">#ffcfd8dc</color>
   <color name="color_base_blue_grey_200">#ffb0bec5</color>
@@ -282,53 +156,36 @@
   <color name="color_border_light">#ffeeeeee</color>
   <color name="color_border_base">#ffe0e0e0</color>
   <color name="color_border_dark">#ffbdbdbd</color>
-  <color name="color_border_focus">#ff009688</color>
-  <color name="color_border_error">#ffe53935</color>
+  <color name="color_border_focus">#ff1665db</color>
+  <color name="color_border_error">#ff1665db</color>
   <color name="color_border_warning">#fffb8c00</color>
   <color name="color_border_success">#ff43a047</color>
   <color name="color_border_button_secondary_base">#ffe0e0e0</color>
-  <color name="color_border_button_secondary_active">#ff303f9f</color>
+  <color name="color_border_button_secondary_active">[object Object]</color>
   <color name="color_border_button_secondary_disabled">#ffeeeeee</color>
-  <color name="color_brand_primary_lighter">#ffb2dfdb</color>
-  <color name="color_brand_primary_light">#ff4db6ac</color>
-  <color name="color_brand_primary_base">#ff009688</color>
-  <color name="color_brand_primary_dark">#ff00796b</color>
-  <color name="color_brand_primary_darker">#ff004d40</color>
-  <color name="color_brand_secondary_lighter">#ffc5cae9</color>
-  <color name="color_brand_secondary_light">#ff7986cb</color>
-  <color name="color_brand_secondary_base">#ff3f51b5</color>
-  <color name="color_brand_secondary_dark">#ff303f9f</color>
-  <color name="color_brand_secondary_darker">#ff1a237e</color>
-  <color name="color_chart_stacked_base_100">#ffbbdefb</color>
-  <color name="color_chart_stacked_base_200">#ff90caf9</color>
-  <color name="color_chart_stacked_base_300">#ff64b5f6</color>
-  <color name="color_chart_stacked_base_400">#ff42a5f5</color>
-  <color name="color_chart_stacked_base_500">#ff2196f3</color>
-  <color name="color_chart_stacked_base_600">#ff1e88e5</color>
-  <color name="color_chart_stacked_base_700">#ff1976d2</color>
-  <color name="color_chart_stacked_base_800">#ff1565c0</color>
-  <color name="color_chart_stacked_base_900">#ff0d47a1</color>
-  <color name="color_font_base">#ff212121</color>
-  <color name="color_font_secondary">#ff424242</color>
-  <color name="color_font_tertiary">#ff757575</color>
-  <color name="color_font_quaternary">#ffbdbdbd</color>
-  <color name="color_font_link">#ff009688</color>
-  <color name="color_font_active">#ff3f51b5</color>
-  <color name="color_font_error">#ffe53935</color>
-  <color name="color_font_warning">#ffef6c00</color>
-  <color name="color_font_success">#ff43a047</color>
-  <color name="color_font_disabled">#ff424242</color>
+  <color name="color_brand_primary_lighter">#ff1665db</color>
+  <color name="color_brand_primary_light">#ff1665db</color>
+  <color name="color_brand_primary_base">#ff1665db</color>
+  <color name="color_brand_primary_dark">#ff1665db</color>
+  <color name="color_brand_primary_darker">#ff1665db</color>
+  <color name="color_brand_secondary_lighter">#ff1665db</color>
+  <color name="color_brand_secondary_light">#ff1665db</color>
+  <color name="color_brand_secondary_base">#ff1665db</color>
+  <color name="color_brand_secondary_dark">#ff1665db</color>
+  <color name="color_brand_secondary_darker">#ff1665db</color>
+  <color name="color_font_base">#ff1665db</color>
+  <color name="color_font_secondary">#ff1665db</color>
   <color name="color_font_inverse_base">#ffffffff</color>
-  <color name="color_font_inverse_secondary">#fff5f5f5</color>
-  <color name="color_font_inverse_tertiary">#ffeeeeee</color>
-  <color name="color_font_inverse_quaternary">#ffbdbdbd</color>
-  <color name="color_font_inverse_link">#ff4db6ac</color>
-  <color name="color_font_inverse_active">#ff7986cb</color>
-  <color name="color_font_inverse_error">#ffef5350</color>
-  <color name="color_font_inverse_warning">#ffffa726</color>
-  <color name="color_font_inverse_success">#ff66bb6a</color>
-  <color name="color_font_inverse_disabled">#fff5f5f5</color>
+  <color name="color_font_inverse_secondary">#ff1665db</color>
+  <color name="color_font_inverse_tertiary">#ff1665db</color>
+  <color name="color_font_inverse_quaternary">#ff1665db</color>
+  <color name="color_font_inverse_link">#ff1665db</color>
+  <color name="color_font_inverse_active">#ff1665db</color>
+  <color name="color_font_inverse_error">#ff1665db</color>
+  <color name="color_font_inverse_warning">#ff1665db</color>
+  <color name="color_font_inverse_success">#ff1665db</color>
+  <color name="color_font_inverse_disabled">#ff1665db</color>
   <color name="color_font_button_primary">#ffffffff</color>
-  <color name="color_font_button_secondary">#ff009688</color>
+  <color name="color_font_button_secondary">[object Object]</color>
   
 </resources>
