--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Fri, 02 Aug 2019 01:36:40 GMT
+ * Generated on Fri, 02 Aug 2019 02:09:19 GMT
  */
 
 $asset-font-icon-name: "MaterialIcons";
@@ -146,8 +146,14 @@ $color-base-grey-600: #757575;
 $color-base-grey-700: #616161;
 $color-base-grey-800: #424242;
 $color-base-grey-900: #212121;
-$color-base-blue-50: #6db3e5;
+$color-base-blue-40: #bed4f1;
+$color-base-blue-60: #80afe7;
+$color-base-blue-80: #448adc;
 $color-base-blue-100: #1665db;
+$color-base-purple-40: #d5d1f8;
+$color-base-purple-60: #afa8f5;
+$color-base-purple-80: #8981f0;
+$color-base-purple-100: #6459ee;
 $color-base-blue-grey-50: #eceff1;
 $color-base-blue-grey-100: #cfd8dc;
 $color-base-blue-grey-200: #b0bec5;
