--- a/styleguide/css/main.css
+++ b/styleguide/css/main.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Fri, 02 Aug 2019 01:36:40 GMT
+ * Generated on Fri, 02 Aug 2019 02:09:19 GMT
  */
 .container {
   margin: 0 auto;
@@ -25,9 +25,55 @@
   background-color: #1665db;
 }
 
+.styleguide-title {
+  font-size: 12px;
+  color: #1665db;
+  border-top: 1px solid #448adc;
+  display: block;
+  padding-top: 8px;
+}
+
+.styleguide--color {
+  width: 200px;
+  height: 48px;
+  line-height: 48px;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 12px;
+  text-align: center;
+  margin-bottom: 4px;
+}
+
+.styleguide--color.blue--100 {
+  background-color: #1665db;
+}
+.styleguide--color.blue--80 {
+  background-color: #448adc;
+}
+.styleguide--color.blue--60 {
+  background-color: #80afe7;
+}
+.styleguide--color.blue--40 {
+  background-color: #bed4f1;
+}
+
+.styleguide--color.purple--100 {
+  background-color: #6459ee;
+}
+.styleguide--color.purple--80 {
+  background-color: #8981f0;
+}
+.styleguide--color.purple--60 {
+  background-color: #afa8f5;
+}
+.styleguide--color.purple--40 {
+  background-color: #d5d1f8;
+}
+
 body {
   font-family: "Open Sans";
   font-size: 1rem;
+  background-color: #24262d;
 }
 
 h1, h2, h3, h4, h5, h6 {
