--- a/styleguide/css/main.css
+++ b/styleguide/css/main.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Fri, 02 Aug 2019 02:09:19 GMT
+ * Generated on Sat, 03 Aug 2019 20:15:13 GMT
  */
 .container {
   margin: 0 auto;
@@ -78,6 +78,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1rem;
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=main.css.map */
