--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Sat, 03 Aug 2019 20:15:13 GMT
+ * Generated on Sat, 03 Aug 2019 20:59:47 GMT
  */
 
 $asset-font-icon-name: "MaterialIcons";
@@ -16,7 +16,7 @@ $color-background-base: #ffffff;
 $color-background-button-primary-base: #1665db;
 $color-background-button-primary-disabled: #1665db;
 $color-background-button-primary-active: #1665db;
-$color-background-button-secondary-base: #1665db;
+$color-background-button-secondary-base: [object Object];
 $color-background-button-secondary-disabled: #1665db;
 $color-background-button-secondary-active: #1665db;
 $color-background-overlay-light: rgba(255, 255, 255, 0.8);
